--- a/style.css
+++ b/style.css
@@ -147,8 +147,7 @@ body {
   border-radius: 40px;
 }
 
-.btn.zero {
-  grid-column: span 2;
-  aspect-ratio: auto;
-  border-radius: 40px;
+.btn.backspace {
+  background: #333;
+  color: #fff;
 }
